# subabot

./: .env.local.example  .gitignore  Discovery.md  README.md  Spacefile  manifest.ts  package-lock.json  package.json  pyrightconfig.json  tailwind.config.js
.github/: FUNDING.yml  backend.yml
.github/workflows/: backend-build.yml  backend-test.yml  backend-tests.yml  backend.yml  deploy.yml  deploy_deta.yml  deploy_fly.yml  prefect-deploy.yml  prefect.yml
.zed/: settings.json  tasks.json
app/: globals.css  globals.scss  layout.tsx  page.tsx  styles.module.scss
backend/: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  Dockerfile.prefect  Procfile  README.md  Spacefile  alembic.ini  database.db  flows.py  fly.toml  prefect.py  prefect.yaml  pyproject.toml  requirements.txt
backend/app/: db.py  helpers.py  main.py  models.py  settings.py  supabase.py
backend/app/core/: __init__.py  settings.py  store.py  utils.py
backend/app/deta/: __init__.py  router.py
backend/app/rss/: __init__.py  constants.py  crawler.py  models.py  router.py  utils.py
backend/app/rss/feeds/: tr.txt
backend/app/slack/: __init__.py  blocks.py  cmd.py  dependencies.py  middlewares.py  router.py  store.py  utils.py
backend/helm/: values.yaml
backend/helm/templates/: _helpers.tpl  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
backend/helm/templates/tests/: test-connection.yaml
backend/k8s-helm/: Chart.yaml  values.yaml
backend/k8s-helm/templates/: NOTES.txt  deployment.yaml
backend/migrations/: README.md  env.py
backend/migrations/versions/: 8d69324659f9_init.py
backend/subabot/: __init__.py  __main__.py  api.py  config.py  db.py  flows.py  main.py  utils.py
backend/subabot/core/: __init__.py  settings.py  store.py  utils.py
backend/subabot/core-new/: __init__.py  settings.py  xata.py
backend/subabot/core_new/: __init__.py  xata.py
backend/subabot/deta/: __init__.py
backend/subabot/prefect/: flows.py
backend/subabot/rss/: __init__.py  crawler.py  models.py  router.py  utils.py
backend/subabot/rss/feeds/: crypto.txt  tech.txt  tr.txt
backend/subabot/slack/: __init__.py  app.py  blocks.py  cmd.py  middlewares.py  store.py  utils.py
backend/tests/: test_crawler.py
components/RobotTile/: index.tsx
components/SlackButton/: index.tsx
frontend/: .env  .env.development  .env.example  .env.local.example  .env.production  .env.template  .xatarc  SLACKER.md  astro.config.mjs  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vercel.json  vite.config.ts
frontend/.xata/migrations/: .ledger  mig_cprboog89kk9o48g9rug.json  mig_cprbpn889kk9o48g9rvg.json  mig_cprbpvn1pnsl6dnkdj80.json  mig_cprbq1n1pnsl6dnkdj90.json  mig_cprbq5v1pnsl6dnkdja0.json  mig_cprbq871pnsl6dnkdjb0.json  mig_cprbqb71pnsl6dnkdjc0.json  mig_cprbr6f1pnsl6dnkdjd0.json  mig_cprbs0889kk9o48g9s1g.json  mig_cprbse089kk9o48g9s2g.json  mig_cprbsjo89kk9o48g9s3g.json  mig_cprbsr71pnsl6dnkdjg0.json  mig_cprbt1889kk9o48g9s4g.json  mig_cprbt7g89kk9o48g9s5g.json  mig_cprbtl71pnsl6dnkdjh0.json  mig_cprbu9889kk9o48g9s6g.json  mig_cprdk0vd9rvd1vn3m03g.json  mig_cprdk1089kk9o48g9sg0.json  mig_cprdk1889kk9o48g9sh0.json  mig_cprdk8fd9rvd1vn3m04g.json  mig_cprdk8nd9rvd1vn3m05g.json  mig_cprdk971pnsl6dnkdk60.json
frontend/app/: globals.scss  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/Footer/: index.tsx
frontend/components/LogoutButton/: index.tsx
frontend/lib/: helpers.ts
frontend/src/: app.css  app.html  env.d.ts
frontend/types/: rss.d.ts
pages/api/: auth.ts  response.ts
pages/success/: [[...teamId]].tsx
(+39 files in other folders)
