[tool.poetry]
name = "subabot"
version = "0.1.0"
description = "AI-powered Slack alert bot to subscribe, classify and notify for keywords on RSS feeds"
authors = ["Doruk Gezici <doruk@gezici.me>"]
license = "LGPL-3.0-or-later"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.24.0"
aiohttp = "^3.9.5"
asyncer = "^0.0.7"
deta = "^1.2.0"
fastapi = "^0.111.0"
feedparser = "^6.0.11"
python-multipart = "^0.0.9"
python-slugify = "^8.0.4"
slack_sdk = "^3.30.0"
xata = "^1.3.5"
prefect = "3.0.0rc1"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
prefect = "flows:deploy_sync"

[tool.taskipy.tasks]
dev = "set -a && source .env && set +a && uvicorn subabot.main:app --host 0.0.0.0 --port 8000 --reload"
lint = "ruff check"
format = "ruff format"
export = "poetry export --output requirements.txt"

[tool.ruff]
line-length = 120
