[project]
name = "subabot"
version = "0.1.0"
description = "AI-powered Slack alert bot to subscribe, classify and notify for keywords on RSS feeds"
readme = "README.md"
license = "LGPL-3.0-or-later"
authors = [{ name = "Doruk Gezici", email = "doruk@gezici.me" }]
requires-python = ">=3.12"
dependencies = [
    "uvicorn>=0.31.1",
    "aiohttp>=3.10.10",
    "asyncer>=0.0.8",
    "fastapi>=0.115.2",
    "feedparser>=6.0.11",
    "python-multipart>=0.0.12",
    "python-slugify>=8.0.4",
    "slack_sdk>=3.33.1",
    "prefect[docker]==3.0.9",
    "supabase>=2.9.0",
    "sqlmodel>=0.0.22",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = ["pytest>=8.3.3", "ruff>=0.6.9", "taskipy>=1.13.0"]

[project.scripts]
start = "subabot.api:start"

[tool.taskipy.tasks]
dev = "uvicorn subabot.api:app --host 0.0.0.0 --port 8000 --reload"
test = "pytest tests"
lint = "ruff check"
format = "ruff format"
deploy = "prefect deploy --all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["/subabot", "/tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
